# suck

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  release-plz.toml  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
src/: channel.rs  error.rs  lib.rs  types.rs
src/asynchronous/: channel.rs  mod.rs  tokio.rs  traits.rs
src/sync/: crossbeam.rs  flume.rs  mod.rs  std.rs  traits.rs
