[package]
name = "suck"
description = "Suck data up through a channel"
authors = ["Callum Leslie <git@cleslie.uk>"]
version = "0.0.2"
edition = "2024"
documentation = "https://docs.rs/suck"
homepage = "https://github.com/callumio/suck"
repository = "https://github.com/callumio/suck"
readme = "README.md"
license = "MIT"
keywords = ["channel", "pull", "producer-consumer", "threading"]
categories = ["concurrency", "data-structures", "rust-patterns"]
exclude = ["flake.nix", "flake.lock", ".envrc", "cliff.toml", "release-plz.toml", "rustfmt.toml", ".github"]

[dependencies]
thiserror = "2.0"
flume = { version = "0.11", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
arc-swap = "1.7.1"

[features]
default = ["all"]

sync = []
async = []

sync-std = ["sync"]
sync-flume = ["sync", "dep:flume"]
sync-crossbeam = ["sync", "dep:crossbeam-channel"]

all-sync = ["sync-std", "sync-flume", "sync-crossbeam"]

all = ["all-sync"]

[lib]

[package.metadata.docs.rs]
all-features = true
